--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.15.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-icons": "^4.7.1",
